--- a/css/styles.css
+++ b/css/styles.css
@@ -215,4 +215,15 @@ li a:hover {
         padding: 0 0 1% 5%;
         font-size: 3.2vw;
     }
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0%;
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        transition: 0.4s;
+        font-size: 14px;
+    }
 }
